2000-04-04  Christopher James Lahey  <clahey@helixcode.com>

	* widgets/e-minicard/e-minicard.c: Fixed some referencing and
	lifetime issues.

2000-04-04  Christopher James Lahey  <clahey@helixcode.com>

	* widgets/e-text/e-text.c: Removed an unnecessary get_bounds call.

	(From a patch by Iain Holmes <ih@csd.abdn.ac.uk>)

	* widgets/e-text/e-text.c: Made tooltips look more like the
	underlying text.  Made tooltips show up more consistently.

2000-04-04  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/demo/Makefile.am, addressbook/demo/e-test-model.c,
	addressbook/demo/e-test-model.h: Changed this to backend to an
	ebook.

	* addressbook/backend/ebook/e-card-iterator.c,
	addressbook/backend/ebook/e-card-iterator.h,
	addressbook/backend/ebook/e-card-list-iterator.c,
	addressbook/backend/ebook/e-card-list.c,
	addressbook/backend/ebook/e-card-list.h,
	addressbook/backend/ebook/e-card.c,
	addressbook/backend/ebook/e-card.h: Fixed const correctness and
	changed a couple of functions to be external.
	
	* addressbook/Makefile.am: Fixed subdir ordering.

2000-04-04  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/backend/ebook/e-book-view.c: Fixed an incorrect
	function.

	* addressbook/backend/ebook/e-book-view.h,
	addressbook/backend/ebook/e-book.h: Fixed some incorrect function
	pointer declarations.

	* addressbook/backend/ebook/e-card-iterator.c,
	addressbook/backend/ebook/e-card-iterator.h,
	addressbook/backend/ebook/e-card-list-iterator.c,
	addressbook/backend/ebook/e-card-list-iterator.h,
	addressbook/backend/ebook/e-card-list.c,
	addressbook/backend/ebook/e-card-list.h,
	addressbook/backend/ebook/e-card.c,
	addressbook/backend/ebook/e-card.h,
	addressbook/backend/ebook/test-card.c: Built new iterator system
	for getting fields with multiple entries.

	* addressbook/backend/ebook/Makefile.am: Added new files
	addressbook/backend/ebook/e-card-iterator.c,
	addressbook/backend/ebook/e-card-iterator.h,